fix css text align prop warning

--- a/styles/Overlay.module.css
+++ b/styles/Overlay.module.css
@@ -22,7 +22,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  textAlign: center;
+  text-align: center;
   background: rgba(20, 20, 20, 0.7);
   color: white;
   opacity: 1;
@@ -32,7 +32,7 @@
 }
 
 .overlay:hover {
-  opacitY: 1
+  opacitY: 1;
 }
 
 .overlayContent {
